# Application-task

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: Dockerfile  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/ai/: __init__.py  graph.py  prompts.py
backend/app/ai/tools/: __init__.py  tool_edit_interaction.py  tool_generate_followup.py  tool_log_interaction.py  tool_meeting_insights.py  tool_retrieve_profile.py
backend/app/api/endpoints/: analytics.py  chat.py  followups.py  hcps.py  interactions.py  products.py
backend/app/db/: database.py  seed.py
backend/app/models/: schema.py
backend/app/schemas/: analytics.py  chat.py  followup.py  hcp.py  interaction.py  product.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Select.tsx  Tabs.tsx  Toast.tsx  utils.ts
frontend/src/pages/Analytics/: AnalyticsPage.tsx
frontend/src/pages/Assistant/: AssistantPage.tsx
frontend/src/pages/Dashboard/: DashboardPage.tsx
frontend/src/pages/HCP/: HCPListPage.tsx  HCPProfilePage.tsx  index.ts
frontend/src/pages/Interactions/: InteractionsListPage.tsx  index.ts
frontend/src/store/: index.ts
frontend/src/types/: index.ts
trading_bot/: __init__.py  cli.py  client.py  logger.py  orders.py  validators.py
(+13 files in other folders)
